# DeleteOperator

./: CMakeLists.txt
src/: ast_parser.cpp  ast_parser.h  lexer.cpp  mypl.cpp  print_visitor.cpp  semantic_checker.cpp  simple_parser.cpp  simple_parser.h  symbol_table.cpp  token.cpp  token.h
tests/: semantic_checker_tests.cpp
